--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/weather_forcast_db?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = root123
+spring.datasource.username = <username>
+spring.datasource.password = <password>
 
 
 ## Hibernate Properties
